# droppost

./: .gitattributes  .gitignore  README.md
local/: README.md
local/rustypaste/: config.toml.template  finish.ps1  register-task.ps1  setup.ps1
local/wireguard/: wg0.conf.template
tray/: DropPost.sln  README.md  index.html  package-lock.json  package.json
tray/DropPost/: AppSettings.cs  DropPost.csproj  FileBrowserForm.cs  Program.cs  SettingsForm.cs  TrayApp.cs  Uploader.cs  app.manifest  publish.ps1
tray/src/: App.css  App.tsx  store.ts  types.ts
tray/src-tauri/: Cargo.toml  tauri.conf.json
tray/src-tauri/capabilities/: default.json
tray/src-tauri/icons/: generate.ps1  icon.icns
tray/src-tauri/src/: lib.rs  main.rs
tray/src/components/: DropZone.tsx  FileBrowser.tsx  Settings.tsx  UploadQueue.tsx
vps/: README.md  setup.sh
vps/nginx/: droppost.conf  keys.conf.example
vps/wireguard/: wg0.conf.template
web/: README.md
